--- a/css/estilo.css
+++ b/css/estilo.css
@@ -358,60 +358,6 @@ form {
     padding-top: 100px;
 }
 
-/*
-Estilo para la API
-*/
-
-.productos-container {
-    display: flex;
-    flex-wrap: wrap; /* Permite saltar a nueva línea */
-    gap: 20px;       /* Espacio entre tarjetas */
-    justify-content: center; /* Centra las tarjetas */
-    padding: 20px;
-}
-
-.item_flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    flex: 1 1 calc(20% - 16px); /* Hasta 5 por fila */
-    max-width: 200px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease-in-out;
-    min-width: 200px;
-}
-
-.item_flex:hover {
-    transform: scale(1.02);
-}
-
-.item_flex img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
-}
-
-.comprar {
-    background-color: #28a745;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    margin-top: 10px;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-}
-
-.comprar:hover {
-    background-color: #218838;
-}
 
 /*
 Carrito
@@ -616,43 +562,8 @@ Modal
   display: none; /* Inicialmente oculto */
 }
 
-/*
-Manejo de datos con Fetch y promesas
-*/
 
-#productos-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
-}
 
-.card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-}
-
-.card img {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-}
-
-.card button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-}
 
 /*
 Pago. html - js
@@ -719,7 +630,9 @@ form input {
 Botón comprar aling buttom
 */
 
-#productos-container {
+
+
+#fakestore-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
@@ -732,7 +645,7 @@ Botón comprar aling buttom
   flex-direction: column; /* aplica los elementos verticalmente */
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 15px;
+  padding: 5px;
   height: 100%; /* Asegura que todas las tarjetas tengan la misma altura */
 }
 
@@ -747,7 +660,7 @@ Botón comprar aling buttom
 /* Estilos para el contenido de la tarjeta */
 .card-content {
   flex-grow: 1; /* Hace que este elemento ocupe todo el espacio disponible */
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 /* Estilos para el botón de compra */
